# tokenkino

./: .gitignore  LICENSE  README.md
tokenKino/: .env  .env.production  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tokenKino/api/: database.py  main.py
tokenKino/brain/: main.py
tokenKino/lib/core/: constants.py  entities.py  io.py  mappers.py  models.py
tokenKino/lib/llc/: constants.py  decompiler.py  flattener.py  functions.py  parser.py  preparser.py  translator.py
tokenKino/lib/tagger/: functions.py
tokenKino/lib/tkll/: functions.py
tokenKino/tokeniko.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tokenKino/tokenkino.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tokeniko/: .env  .env.production  .env.template  CLAUDE.md  Dockerfile  README.md  VISION.md  directory_structure.txt  docker-compose.yml  pyproject.toml  requirements.txt
tokeniko/.claude/agents/: first-officer.md
tokeniko/.claude/briefs/: 2026-07-21-digest-machinery.md  2026-07-23-direct-fact-match.md  2026-07-23-identity-blindness.md  2026-07-24-and-split.md  2026-07-24-blog-consensus.md  2026-07-24-ears-hallucination.md  2026-07-24-learned-scaffolds.md  2026-07-24-pronoun-momentum.md
tokeniko/api/: main.py  schemas.py  services.py
tokeniko/api/services/: __init__.py  axiom_service.py  definition_service.py  evaluation_service.py  memory_service.py  stakeholder_service.py  theorem_service.py  validation.py
tokeniko/brain/: README.md  api_client.py  behavior.py  compose.py  context.py  heartbeat.py  main.py  mimicry.py  thinking.py
tokeniko/doc/: _phase0_regression.py  captain-hunches.md  landed.md  notes.md  paper_outline.md  parked.md  parser-compiler-review.md  plan.md  reasoning-engine-brainstorm.md  roadmap.md  test-feedback.md
tokeniko/doc/ref/: 2026.07.14 discord test session CAP.md  anthropic-application.md  brain-v1.1.md  cap-feedback.md  captain-hunches.md  kb-growing-outward.md  notes.md  paper_outline.md  test-feedback.md
tokeniko/doc/ref/processes/: README.md  viewer.html
tokeniko/lib/core/: deixis.py  entities.py  evaluation.py  evaluation_harness.py  events.py  io.py  kb_extract.py  mappers.py  memory.py  models.py  places.py  tk.py  tkllc.py  tkllcV2.py  tkzip.py  trust.py  untangle.py  utilities.py  voice.py  zip_native.py
tokeniko/lib/discord/: README.md  __init__.py  client.py  constants.py  models.py
tokeniko/lib/llc/: anchors.py  compiler.py  compilerV1.py  constants.py  decompiler.py  evaluator.py  flattener.py  normalizer.py  operators.py  parser.py  parserV1.py  preparser.py  social.py  translator.py  utils.py
tokeniko/lib/llc/compiler/: __init__.py  c_entities.py  c_main.py  c_spacetime.py  c_state.py  c_statements.py  c_subordinates.py  c_untangle.py  (+1 more)
tokeniko/lib/rag/: __init__.py  client.py  registry.py
tokeniko/lib/tkll/: functions.py
tokeniko/senses/: README.md  blog.py  blog_outbound.py  inbound.py  main.py  microscope.py  outbound.py  voicegate.py
tokeniko/tests/: asserts.py  conftest.py  test_adverbial_quantifiers.py  test_and_split.py  test_assertedness.py  test_belief_revision.py  test_blog_p2.py  test_blog_p3.py  test_causal.py  test_compiler.py  test_compose_scaffolds.py  test_conditional_rules.py  test_context_ring.py  test_contrast.py  test_coreference_gate.py  test_deixis.py  test_digest.py  test_direct_fact_match.py  test_disjointness.py  test_dropped_content.py  test_evaluator.py  test_guard.py  test_harvest_singles.py  test_hypothesis.py  test_identity.py  test_identity_blindness.py  test_identity_snowflake.py  test_life_p1.py  test_materialize_pin.py  test_microscope.py  test_mimicry.py  test_negation_possessive.py  test_nominal_imply.py  test_observation_facts.py  test_places_bridge.py  test_pronoun_momentum.py  test_provenance.py  test_quantifier_scope.py  test_rag.py  test_reductio.py  (+27 more)
tokeniko/tokeniko.egg-info/: PKG-INFO  SOURCES.txt
(+175 files in other folders)
