[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokeniko"
version = "0.1.0"
description = "tokeniko"
dependencies = [
    "fastapi",
    "uvicorn",
    "bunnet",
    "python-dotenv",
    "spacy",
    "numpy",
    "tqdm",
    "ollama"
]

[tool.taskipy.tasks]
api = "uvicorn api.main:app --reload"
brain = "python -m brain.main"


[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "api*"] # Include la cartella lib e tutte le sue sottocartelle