[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokeniko"
version = "0.1.0"
description = "tokeniko"
dependencies = [
    "fastapi",
    "uvicorn",
    "bunnet",
    "python-dotenv",
    "spacy",
    "spacy-stanza",
    "torch",
    "transformers",
    "sentencepiece",
    "symspellpy",
    "lingua-language-detector",
    "textacy",
    "numpy",
    "tqdm",
    "ollama",
    "taskipy",
    "word2number",
    "sacremoses"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.taskipy.tasks]
api = "uvicorn api.main:app --reload"
brain = "python -m brain.main"
senses = "python -m senses.main"
test = "pytest"


[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "api*"] # Include la cartella lib e tutte le sue sottocartelle