[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokeniko"
version = "0.1.0"
description = "tokeniko"
dependencies = [
    "fastapi",
    "uvicorn",
    "bunnet",
    "python-dotenv",
    "spacy",
    "spacy-stanza",
    "torch",
    "transformers",
    "sentencepiece",
    "symspellpy",
    "lingua-language-detector",
    "textacy",
    "numpy",
    "tqdm",
    "ollama",
    "taskipy",
    "word2number",
    "sacremoses",
    "discord.py",
    "anthropic"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "pipeline: needs the spaCy/Stanza pipeline or the Mongo sandbox (auto-marked in conftest by fixture use)",
]

[tool.taskipy.tasks]
api = "uvicorn api.main:app --reload"
brain = "python -m brain.main"
senses = "python -m senses.main"
test = "pytest"
# the FAST lane (2026-07-18, author's ruling): pure-logic tests only — no model load, no Mongo,
# runs in seconds. Iterate on this; the FULL gate (`task test`) stays sacred before every commit.
test-fast = "pytest -m 'not pipeline'"


[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "api*"] # Include la cartella lib e tutte le sue sottocartelle